assets/css/style_dark.css
/* ... */
/** Site footer */
.site-footer { border-top: 1px solid #404040; padding: 5px 0; }

.footer-heading { font-size: 1.125rem; margin-bottom: 1px; }

.feed-subscribe .svg-icon { padding: 5px 5px 2px 0; }

.contact-list, .social-media-list, .pagination { list-style: none; margin-left: 0; }

.footer-col-wrapper, .social-links { font-size: 0.9375rem; color: #999999; }

.footer-col { margin-bottom: 5px; }

.footer-col-1, .footer-col-2 { width: calc(50% - (30px / 2)); }

.footer-col-3 { width: calc(100% - (30px / 2)); }

@media screen and (min-width: 800px) { .footer-col-1 { width: calc(35% - (30px / 2)); } .footer-col-2 { width: calc(20% - (30px / 2)); } .footer-col-3 { width: calc(45% - (30px / 2)); } }

@media screen and (min-width: 600px) { .footer-col-wrapper { display: flex; } .footer-col { width: calc(100% - (30px / 2)); padding: 0 15px; } .footer-col:first-child { padding-right: 15px; padding-left: 0; } .footer-col:last-child { padding-right: 0; padding-left: 15px; } }

/** Page content */
.page-content { padding: 30px 0; flex: 1 0 auto; }

.page-heading { font-size: 2rem; }

.post-list-heading { font-size: 1.75rem; }

.post-list { margin-left: 0; list-style: none; }

.post-list > li { margin-bottom: 30px; }

.post-meta { font-size: 14px; color: #999999; }

.post-link { display: block; font-size: 1.5rem; }

/** Posts */
.post-header { margin-bottom: 30px; }

.post-title, .post-content h1 { font-size: 2.625rem; letter-spacing: -1px; line-height: 1.15; }

@media screen and (min-width: 800px) { .post-title, .post-content h1 { font-size: 2.625rem; } }

.post-content { margin-bottom: 30px; }

.post-content h1, .post-content h2, .post-content h3 { margin-top: 60px; }

.post-content h4, .post-content h5, .post-content h6 { margin-top: 30px; }

.post-content h2 { font-size: 1.75rem; }

@media screen and (min-width: 800px) { .post-content h2 { font-size: 2rem; } }

.post-content h3 { font-size: 1.375rem; }

@media screen and (min-width: 800px) { .post-content h3 { font-size: 1.625rem; } }

.post-content h4 { font-size: 1.25rem; }

.post-content h5 { font-size: 1.125rem; }

.post-content h6 { font-size: 1.0625rem; }

.social-media-list, .pagination { display: table; margin: 0 auto; }

.social-media-list li, .pagination li { float: left; margin: 5px 10px 5px 0; }

.social-media-list li:last-of-type, .pagination li:last-of-type { margin-right: 0; }

.social-media-list li a, .pagination li a { display: block; padding: 7.5px; border: 1px solid #404040; }

.social-media-list li a:hover, .pagination li a:hover { border-color: #a6a6a6; }

/** Pagination navbar */
.pagination { margin-bottom: 30px; }

.pagination li a, .pagination li div { min-width: 41px; text-align: center; box-sizing: border-box; }

.pagination li div { display: block; padding: 7.5px; border: 1px solid transparent; }

.pagination li div.pager-edge { color: #404040; border: 1px dashed; }

/** Grid helpers */
@media screen and (min-width: 800px) { .one-half { width: calc(50% - (30px / 2)); } }

/*# sourceMappingURL=style.css.map */

/** Hamish's custom attributes **/
.site-nav {
    z-index: 4;
}

img {
    display: block
}

figcaption {
    text-align: center;
}

.svg-icon {
    color: grey;
}

.social-media-list li a:hover > .svg-icon {
    color: #218048;
}

.feed-subscribe a:hover > .svg-icon {
    color: #f26522
}

/* CSS */
.button-4 {
    appearance: none;
    background-color: #212121;
    border: 1px solid #FAFBFC;
    border-radius: 6px;
    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
    box-sizing: border-box;
    color: #2ecc71;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    font-weight: 500;
    list-style: none;
    position: relative;
    transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    vertical-align: middle;
    white-space: nowrap;
    word-wrap: break-word;
  }
  
  .button-4:hover {
    background-color: #F3F4F6;
    text-decoration: none;
    color: #212121;
    transition-duration: 0.1s;
  }
  
  .dropped {
    background-color: #F3F4F6;
    text-decoration: none;
    color: #212121;
    transition-duration: 0.1s;
  }
  
  .button-4:before {
    display: none;
  }
  
  .button-4:-webkit-details-marker {
    display: none;
  }


.dropDownAbstract {
    background-color: #2b2b2b;
    padding: 5px;
    border-radius: 6px;
  }


/**
 * Tooltip Styles
 */

/* Add this attribute to the element that needs a tooltip */
[data-tooltip] {
  position: relative;
  z-index: 2;
  cursor: pointer;
  color: inherit !important;
  border-bottom: 1px dotted;
}

/* Hide the tooltip content by default */
[data-tooltip]:before,
[data-tooltip]:after {
  visibility: hidden;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
  opacity: 0;
  pointer-events: none;
  color: inherit !important;
}

/* Position tooltip above the element */
[data-tooltip]:before {
  position: absolute;
  bottom: 150%;
  left: 50%;
  margin-bottom: 5px;
  margin-left: -40px;
  padding: 7px;
  width: max-content;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  background-color: #000;
  background-color: hsla(0, 0%, 20%, 0.9);
  color: #fff;
  content: attr(data-tooltip);
  text-align: center;
  font-size: 14px;
  line-height: 1.2;
  color: inherit !important;
}

/* Triangle hack to make tooltip look like a speech bubble */
[data-tooltip]:after {
  position: absolute;
  bottom: 150%;
  left: 50%;
  margin-left: -5px;
  width: 0;
  border-top: 5px solid #000;
  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  content: " ";
  font-size: 0;
  line-height: 0;
  color: inherit !important;
}
/* ... */

